--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="src/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>PROJECT.K</title>
   </head>
   <body>
