--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="naver-site-verification" content="619bf4c505dbb1dc6cafba17aa834959a9973264" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>PROJECT.K</title>
   </head>
