--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="naver-site-verification" content="619bf4c505dbb1dc6cafba17aa834959a9973264" />
+    <meta
+      name="naver-site-verification"
+      content="619bf4c505dbb1dc6cafba17aa834959a9973264"
+    />
+    <meta name="robots" content="noindex,follow" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>PROJECT.K</title>
+    <title>네온 포트폴리오 – Web Creator</title>
+    <meta
+      name="description"
+      content="React와 WebGL 기반 네온 스타일 UI 포트폴리오"
+    />
+    <meta property="og:title" content="Neon Portfolio" />
+    <meta property="og:description" content="웹 기획과 프론트엔드 작품 모음" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
