Enable indexing: update robots meta

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="naver-site-verification"
       content="619bf4c505dbb1dc6cafba17aa834959a9973264"
     />
-    <meta name="robots" content="noindex,follow" />
+    <meta name="robots" content="index,follow,max-image-preview:large" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>네온 포트폴리오 – Web Creator</title>
     <meta
