--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- 파비콘 -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="192x192" href="/src/img/favicon-192.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/src/img/apple-touch-icon.ico" />
 
     <!-- Open Graph (공유용) -->
     <meta property="og:title" content="네온 포트폴리오 – Web Creator" />
