--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
 
     <!-- 기본 SEO -->
-    <title>네온 포트폴리오 – Web Creator</title>
+    <title>김기윤의 포트폴리오 – Web Creator</title>
     <meta
       name="description"
       content="React와 WebGL 기반 네온 스타일 UI 포트폴리오 – 웹 기획과 프론트엔드 작업을 한 번에 보여주는 개인 포트폴리오 사이트."
@@ -42,7 +42,7 @@
     <meta name="author" content="김기윤" />
     <meta
       name="keywords"
-      content="네온 포트폴리오, 웹 포트폴리오, Web Creator, 프론트엔드, React, UI, 웹 기획, 웹 제작"
+      content="김기윤의 포트폴리오, 웹 포트폴리오, Web Creator, 프론트엔드, React, UI, 웹 기획, 웹 제작"
     />
     <meta name="theme-color" content="#050816" />
 
@@ -55,7 +55,7 @@
     <link rel="apple-touch-icon" href="/src/img/apple-touch-icon.ico" />
 
     <!-- Open Graph (공유용) -->
-    <meta property="og:title" content="네온 포트폴리오 – Web Creator" />
+    <meta property="og:title" content="김기윤의 포트폴리오 – Web Creator" />
     <meta
       property="og:description"
       content="React와 WebGL 기반 네온 스타일 UI 포트폴리오 – 웹 기획과 프론트엔드 작업 모음."
@@ -68,7 +68,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="네온 포트폴리오 – Web Creator" />
+    <meta name="twitter:title" content="김기윤의 포트폴리오 – Web Creator" />
     <meta
       name="twitter:description"
       content="React와 WebGL 기반 네온 스타일 UI 포트폴리오 – 웹 기획과 프론트엔드 작업 모음."
@@ -80,7 +80,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "네온 포트폴리오 – Web Creator",
+        "name": "김기윤의 포트폴리오 – Web Creator",
         "url": "https://kimkiyun.com/",
         "inLanguage": "ko",
         "description": "React와 WebGL 기반 네온 스타일 UI 포트폴리오 – 웹 기획과 프론트엔드 작업을 한 번에 보여주는 개인 포트폴리오 사이트.",
